# pyproject

./: .gitignore  .vercelignore  README.md  clean.py  makefile  movie_review_sentiment_analysis_02.ipynb  pyproject.toml  requirements.txt  vercel.json
a2a_samples/: README.md  pyproject.toml  v01_server.py  v02_client.py
adk_adapter/: adkrun.py  adkutil.py  agui.py  client_factory.py  main.py  pyproject.toml  pytest.ini
agent_adapter/: agui.py  client_factory.py  joke_agent.py  main.py  otel.py  pyproject.toml  weather_agent.py  web.py
agent_adapter/agent/: code.py  haiku.py  hitl.py  joke.py  light.py  mslearn.py  recipe.py  state.py  steps.py  weather.py
agent_adapter/checkpoint/: postgres.py
agent_adapter/code_agent/: agent.py
agent_adapter/exec_workflow/: workflow.py
agent_adapter/executor/: aggregator.py  average.py  checkpoint.py  dispatcher.py  reverse_text.py  reviewer.py  sum.py  upper_text.py  writer.py
agent_adapter/joke_agent/: agent.py
agent_adapter/light_agent/: agent.py
agent_adapter/memory/: history.py  user.py
agent_adapter/middleware/: agent.py  chat.py  function.py
agent_adapter/mslearn_agent/: agent.py
agent_adapter/storage/: history.py
agent_adapter/text_workflow/: workflow.py
agent_adapter/tools/: light.py  weather.py
agent_adapter/weather_agent/: agent.py
agent_adapter/workflow/: exec.py  text.py  writing.py
agent_adapter/writing_workflow/: workflow.py
api/: index.py
app/: dependencies.py  main.py  mcp_openapi_merge.py
autogen_demo/: README.md  arithmetic_agent.py  base.py  count_down_agent.py  function_call_termination.py  gemini_assistant_agent.py  pyproject.toml  v01_base.py  v02_sk.py  v03_agent_with_multi_modal_input.py  v04_mcp.py  v05_structured.py  v06_robin_team.py  v07_single_team.py  v08_fastapi_agent.html  v08_fastapi_agent.py  v09_fastapi_team.html  v09_fastapi_team.py  v09_human_client.html  v09_human_client.py  v10_custom_agent.py  v11_swarm.py  v12_magentic.py  v13_flow.py  v14_flow_filter.py  v15_memory.py  v16_memory_canvas.py  v17_mem0.py  v18_memory_chromadb.py  v19_company_research.py  v20_literature_review.py  v21_message_handler.py  v22_topics.py  v23_grpc.py  websocket_json.py
google_colab/: README.md  TextClusteringAndTopicModeling_01.ipynb  TextClusteringAndTopicModeling_02.ipynb  TextClusteringAndTopicModeling_03.ipynb  TextClusteringAndTopicModeling_04.ipynb  blip_01.ipynb  blip_02.ipynb  clip_01.ipynb  clip_02.ipynb  embedding_01.ipynb  embedding_02.ipynb  generation_embedding_model_01.ipynb  generation_embedding_model_02.ipynb  generation_embedding_model_03.ipynb  generation_embedding_model_04.ipynb  generation_embedding_model_05.ipynb  generation_generative_model_01.ipynb  generation_generative_model_02.ipynb  generation_representation_model_01.ipynb  generation_representation_model_02.ipynb  generation_representation_model_03.ipynb  generation_representation_model_04.ipynb  main.py  movie_review_sentiment_analysis_01.ipynb  movie_review_sentiment_analysis_02.ipynb  movie_review_sentiment_analysis_03.ipynb  movie_review_sentiment_analysis_04.ipynb  prompt_01.ipynb  prompt_02.ipynb  rag_01.ipynb  rag_02.ipynb  text_generation_01.ipynb  text_generation_02.ipynb  text_generation_03.ipynb  text_generation_04.ipynb  text_generation_05.ipynb  text_generation_06.ipynb  text_generation_07.ipynb  tokenizer_01.ipynb  tokenizer_02.ipynb  (+7 more)
langchain_adapter/: agent.py  ai21.py  chat.py  compression.py  custom_chain.py  doc_loader.py  doc_transformers.py  duck.py  embedding.py  fallbacks.py  feature_store.py  history.py  main.py  multimodal.py  multiple_vectors.py  option.py  parsers.py  passthrough.py  pyproject.toml  reorder.py  routing.py  selector.py  stream.py  text_summary.py  tool.py
mcp_adapter/: README.md  client.py  main.py  models.py  pyproject.toml  server.py
mcp_demo/: client.py  main.py  pyproject.toml  server.py
oauth_client/: auth_server.py  client.py  config.py  main.py  models.py  pyproject.toml
public_opinion_monitoring/: 1.weibo_foodsafety.jsonl  2.weibo_data_tagged.jsonl  3.1.weibo_data_analyzed_structured.jsonl  3.weibo_data_analyzed.jsonl  README.md  custom_food_dict.txt  docker-compose.yml  main.py  pyproject.toml
public_opinion_monitoring/convert/: doc_convert.py  readme.md
public_opinion_monitoring/knowledge_graph/: gragh_with_py2neo.py  neo_gragh.py
public_opinion_monitoring/models/: llm_response.py
public_opinion_monitoring/nlp/: analyze.py  analyze_structured.py
public_opinion_monitoring/spider/: weibo_spider.py
public_opinion_monitoring/tokenization/: tokenize.py  tokenize_handler.py  tokenize_hanlp.py
public_opinion_monitoring/vector/: sentence_transformers.py
semantic_kernel/: 00.chat.py  01.prompt.py  02.argument.py  service.py
semantic_kernel_adapter/: chat.py  main.py  pyproject.toml  service.py
semantic_kernel_service/: README.md  service.py  v00_chat.py  v01_prompt.py  v02_argument.py  v03_embedding.py  v04_function.py  v05_groundedness.py  v06_agent_base.py  v07_agent_plugin.py  v08_agent_plugin_kernel.py  v09_agent_group_chat.py  v10_agent_orchestration_base.py  v10_agent_orchestration_concurrent.py  v11_agent_orchestration_seq.py  v12_agent_orchestration_group_chat.py  v13_agent_orchestration_handoff.py  v14_agent_orchestration_handoff_with_structured_inputs.py  v15_mem0.py  v16_process_base.py  v17_process_simple.py  v20_auto_gen_use_tools.py  v22_mcp_server.py  v23_audio.py  v24_mcp_agent.py  v25_google_search.py  v26_service_selector.py  v27_format.py
transformers_demo/: TextClusteringAndTopicModeling_01.ipynb  TextClusteringAndTopicModeling_02.ipynb  TextClusteringAndTopicModeling_03.ipynb  TextClusteringAndTopicModeling_04.ipynb  blip_01.ipynb  blip_02.ipynb  clip_01.ipynb  clip_02.ipynb  cohere_01.ipynb  embedding_01.ipynb  embedding_02.ipynb  model_tokenizer.py  movie_review_sentiment_analysis_01.ipynb  movie_review_sentiment_analysis_02.ipynb  (+17 more)
web/: dependencies.py  main.py  pyproject.toml
web/api/v1/: __init__.py  earnings.py  sk_basic.py
web/core/: database.py
(+68 files in other folders)
