[project]
name = "python-vercel-service"
version = "0.1.0"
description = "to project with python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "scalar-fastapi>=1.3.0",
    "uvicorn>=0.35.0",
    "werkzeug>=1.0.1",
]

[dependency-groups]
dev = [
    "ruff (>=0.8.5)",
]

[tool.uv.workspace]
members = [
    "agent_adapter",
]

[project.scripts]
app = "app.main:app"
