[project]
name = "agent-adapter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-framework>=1.0.0b251120",
    "agent-framework-devui>=1.0.0b251211",
    "openai>=1.99.9",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
]
