[project]
name = "autogen-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogen-agentchat>=0.7.1",
    "autogen-ext[magentic-one,mcp,mem0,openai,semantic-kernel-core]>=0.7.1",
    "fastapi>=0.116.1",
    "google-genai>=1.28.0",
    "orjson>=3.11.1",
    "pyyaml>=6.0.2",
    "uvicorn[standard]>=0.35.0",
]
