[project]
name = "autogen-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "arxiv>=2.2.0",
    "autogen-agentchat>=0.7.1",
    "autogen-ext[chromadb,grpc,magentic-one,mcp,mem0,openai,semantic-kernel-core]>=0.7.1",
    "bs4>=0.0.2",
    "fastapi>=0.116.1",
    "google-genai>=1.28.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "orjson>=3.11.1",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "uvicorn[standard]>=0.35.0",
    "yfinance>=0.2.65",
]
