[project]
name = "fastapi-extension"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "faker>=37.5.3",
    "fastapi>=0.116.1", 
    "motor>=3.7.1", 
    "scalar-fastapi>=1.3.0", 
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff (>=0.8.5)",
]

[tool.uv.workspace]
members = [
    "../semantic_kernel_adapter",
    "../langchain_adapter",
    "../mcp_adapter",
]
